src/test/deca/library/invalid/trace_matrice_non_carree.deca
// Description:
//    Teste le calcul de déterminant sur des matrices non carrées
//
// Resultats:
//    La trace de la matrice est: Impossible de calculer la trace d'une matrice non carrée
//    Erreur de dimension
//
// Historique:
//    cree le 22/01/2023

#include "Trace.decah"

    {
    Trace matrixTrace=new Trace();
    int[][]a=new int[3][2];
    int[][]d=new int[2][3];

    matrixTrace.setInt2DTable(a,5);
    println("La trace de la matrice est: ",matrixTrace.getTraceInt(a));
    println("");

    }